# plugin-whatsapp

./: .gitignore  BAILEYS_SETUP.md  README.md  package.json  tsup.config.ts
__tests__/: accounts.test.ts  normalize.test.ts
python/: README.md  pyproject.toml
python/elizaos_plugin_whatsapp/: __init__.py  accounts.py  client.py  config.py  normalize.py  service.py  types.py
python/elizaos_plugin_whatsapp/actions/: __init__.py  send_interactive.py  send_media.py  send_message.py  send_reaction.py
python/elizaos_plugin_whatsapp/handlers/: __init__.py  message.py  webhook.py
python/elizaos_plugin_whatsapp/providers/: __init__.py  chat_state.py
python/tests/: test_accounts.py  test_actions.py  test_config.py  test_exports.py  test_normalize.py  test_providers.py  test_types.py
rust/: Cargo.toml
rust/src/: accounts.rs  client.rs  config.rs  error.rs  lib.rs  normalize.rs  service.rs  types.rs
rust/src/actions/: mod.rs  send_interactive.rs  send_media.rs  send_message.rs  send_reaction.rs
rust/src/providers/: chat_state.rs  mod.rs
rust/tests/: integration_tests.rs
src/: client.ts  index.ts  service.ts  types.ts
src/__tests__/: client.test.ts  index.test.ts  test-utils.ts  types.test.ts
src/__tests__/handlers/: message.handler.test.ts  webhook.handler.test.ts
src/__tests__/utils/: validators.test.ts
src/baileys/: auth.ts  connection.ts  index.ts  message-adapter.ts  qr-code.ts
src/clients/: baileys-client.ts  cloud-api-client.ts  factory.ts  index.ts  interface.ts
src/handlers/: message.handler.ts  webhook.handler.ts
src/utils/: config-detector.ts  validators.ts
typescript/: biome.json.bak  build.ts  index.ts  package.json  tsconfig.build.json  tsconfig.json
typescript/src/: accounts.ts  client.ts  config.ts  index.ts  normalize.ts  service.ts  types.ts
typescript/src/actions/: index.ts  sendMessage.test.ts  sendMessage.ts  sendReaction.ts
typescript/src/baileys/: auth.ts  connection.ts  index.ts  message-adapter.ts  qr-code.ts
typescript/src/clients/: baileys-client.ts  factory.ts  index.ts  interface.ts
typescript/src/handlers/: message.handler.ts  webhook.handler.ts
typescript/src/utils/: config-detector.test.ts  config-detector.ts  index.ts  validators.ts
